--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,10 @@
       <td>{{ task.task_text }}</td>
       <td>{{ task.created.date() }}</td>
       <td>
-        <button class="red">Delete</button>
-        <button class="blue">Update</button>
+        <form>
+          <button class="red" formaction="/delete/{{task.task_id}}">Delete</button>
+          <button class="blue" formaction="/update/{{task.task_id}}">Update</button>
+        </form>
       </td>
     </tr>
 
